# jtml-v1

./: CMakeLists.txt  README.md  example.html  quick-test.cpp
examples/: dicts.jtml  drag_and_drop_tasks.jtml  dynamic_replacement.jtml  styled_profile_page.jtml  user_interactions.jtml
include/: Array.cpp  Array.h  Dict.cpp  Dict.h  Environment.cpp  Environment.h  Function.h  jtml_ast.h  jtml_interpreter.h  jtml_lexer.h  jtml_parser.h  jtml_value.h  renderer.h  transpiler.h  value.cpp  websocket_server.h
scripts/: jtml_bindings.cpp  main.cpp  quick_test.sh
src/: jtml_ast.cpp  jtml_interpreter.cpp  jtml_lexer.cpp  jtml_parser.cpp  transpiler.cpp
test/: test.cpp
